# lantmateriet_osm

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
lantmateriet/: Cargo.toml
lantmateriet/resources/: lantmateriet_default.yml
lantmateriet/src/: binary.rs  config.rs  lib.rs  shape.rs  sweref99tm.rs
lantmateriet/src/shape/: dbase.rs
styles/: lines  options  points  polygons  typfile.txt
