[package]
name = "lantmateriet"
version = "0.1.0"
authors = ["Felix Stridsberg <felixstridsberg@gmail.com>"]
edition = "2018"
description = "Reader for lantmateriet shape format. (And much more for now)"

[dependencies]
vadeen_osm = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
